# OpenGLTestFramework

./: CMakeLists.txt  main.cpp  shader_f.glsl  shader_v.glsl
src/: Camera.cpp  Camera.hpp  CameraManipulator.cpp  CameraManipulator.hpp  GraphicsContext.cpp  GraphicsContext.hpp  InputContext.cpp  InputContext.hpp  ShaderLoader.cpp  ShaderLoader.hpp  SingletonMacro.hpp  TextureManager.cpp  TextureManager.hpp  Window.cpp  Window.hpp  forward_declarations.hpp
